--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "my-awesome-project",
+  "version": "1.0.0",
   "devDependencies": {
     "commitizen": "^4.3.0",
     "cz-emoji": "^1.3.2-canary.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-emoji"
+    }
   }
 }
+
